Fixing img on iphone devices

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -17,8 +17,7 @@
 
 .myImage {
   border-radius: 50%;
-  height: 100%;
-  width: 100%;
+  width: 100vw;
 }
 
 .myIcons {
